--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,7 @@
 /Godeps/
 
 ### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 *.code-workspace
 
 ### VisualStudioCode Patch ###
